# ChangeLog for media-libs/libmpcdec
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpcdec/ChangeLog,v 1.39 2008/11/10 11:36:22 armin76 Exp $

  10 Nov 2008; Raúl Porcel <armin76@gentoo.org> libmpcdec-1.2.6-r2.ebuild:
  arm/sh stable

  18 Sep 2008; <baude@gentoo.org> ChangeLog:
  stable ppc64, bug 237030

  16 Sep 2008; Jeroen Roovers <jer@gentoo.org> libmpcdec-1.2.6-r2.ebuild:
  Stable for HPPA (bug #237030).

  15 Sep 2008; Raúl Porcel <armin76@gentoo.org> libmpcdec-1.2.6-r2.ebuild:
  alpha/ia64/sparc stable wrt #237030

  13 Sep 2008; nixnut <nixnut@gentoo.org> libmpcdec-1.2.6-r2.ebuild:
  Stable on ppc wrt bug 237030

  11 Sep 2008; Markus Meier <maekke@gentoo.org> libmpcdec-1.2.6-r2.ebuild:
  amd64/x86 stable, bug #237030

  20 Apr 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/libmpcdec-1.2.6+libtool22.patch, libmpcdec-1.2.6-r2.ebuild:
  Add patch to build with libtool 2.2, thanks to Arfrever Frehtes Taifersar
  Arahesis in bug #218444 for reporting.

*libmpcdec-1.2.6-r2 (18 Apr 2008)

  18 Apr 2008; Diego Pettenò <flameeyes@gentoo.org>
  +libmpcdec-1.2.6-r2.ebuild:
  Revision bump to drop libtool .la files.

  12 Feb 2008; Santiago M. Mola <coldwind@gentoo.org>
  libmpcdec-1.2.6.ebuild:
  amd64 stable wrt bug #204679

*libmpcdec-1.2.6-r1 (19 Jan 2008)

  19 Jan 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/libmpcdec-1.2.6-riceitdown.patch, +libmpcdec-1.2.6-r1.ebuild:
  Add patch to respect user CFLAGS, rather than force -O3 -fomit-frame-pointer
  and -fPIC for static libraries.

  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> libmpcdec-1.2.6.ebuild:
  alpha/ia64 stable wrt #204679

  10 Jan 2008; Jeroen Roovers <jer@gentoo.org> libmpcdec-1.2.6.ebuild:
  Stable for HPPA (bug #204679).

  08 Jan 2008; Markus Meier <maekke@gentoo.org> libmpcdec-1.2.6.ebuild:
  x86 stable, bug #204679

  08 Jan 2008; Brent Baude <ranger@gentoo.org> libmpcdec-1.2.6.ebuild: