@@ -1,7 +1,6 @@
 AUX libmpcdec-1.2.6+libtool22.patch 373 RMD160 2c6e90b4ebb6a6a82cf0de2c855bd5e4e202931e SHA1 8700d83699b60a96b0f7d48de86af4fe92ae9ab6 SHA256 0ace58e88521d9cc723d735e77b3030682e46b98d8c8bb720f0e222c66ef2625
 AUX libmpcdec-1.2.6-riceitdown.patch 372 RMD160 de83f9bf90a34afb0e0ac21b61f01958c7056228 SHA1 1d5d40ba31dd0055eeb9296b07ff5cf05329f21c SHA256 ae2750802fabd862f8a1ab89eb908c02ef465524246b2877fabe666d927caba4
 DIST libmpcdec-1.2.6.tar.bz2 250302 RMD160 97173a1c037c1be748fb0d37e7fb7750610486db SHA1 32139ff5cb43a18f7c99637da76703c63a55485a SHA256 4bd54929a80850754f27b568d7891e1e3e1b8d2f208d371f27d1fda09e6f12a8
-EBUILD libmpcdec-1.2.6-r1.ebuild 858 RMD160 34b28655fbcccf426ba9a9f07e75865954f050a6 SHA1 5e513f11af1c6b65e4bf0203f2903126b55f9dbf SHA256 6c838fe33686c08156c093d762f5ea60953567e49f02688409b1b5dbed99cf8d
-EBUILD libmpcdec-1.2.6-r2.ebuild 925 RMD160 2a1207b32b3aa4f30ecd043a2ba29a71586f7c5a SHA1 cd4f57b2667c41bf45851879654ccf6a152a455c SHA256 017fb5b0a075ad394e644a7a6fc361881049bb7f43afd97548eb948dcd31c010
-MISC ChangeLog 5158 RMD160 8da1bbc6e5eaae6c4430420977c99483038f1d62 SHA1 a651d597c119b9ce5e131ae102f917b348b6235d SHA256 0650f353d1a001fe789e7d1b8768cb7000cee80a79e95b46ed3b782e6e2c6b2f
+EBUILD libmpcdec-1.2.6-r2.ebuild 830 RMD160 5dca60500c47fb2de2ff12ea6756fdb2af3b1b52 SHA1 ba935c875ec800c0d063398935a28cb986409466 SHA256 abf5081bf3bba391d5bdcbd7e734f409ac9dc4b114d2cef13b455eabdd8c82a7
+MISC ChangeLog 5461 RMD160 3080180e31d6c602d513556d23594ec40683fcb8 SHA1 4c4e69cbf19e832000832e57fcd7f9a5b8a5456c SHA256 01b972178eb7347309e8c4147c1b9183abd3c433607eec3de69794796479aa27
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
