@@ -1,37 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-libs/libmpcdec/libmpcdec-1.2.6-r1.ebuild,v 1.1 2008/01/19 13:07:24 flameeyes Exp $
-
-inherit eutils libtool autotools
-
-DESCRIPTION="Musepack decoder library"
-HOMEPAGE="http://www.musepack.net"
-SRC_URI="http://files2.musepack.net/source/${P}.tar.bz2"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux"
-IUSE=""
-
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-
-	epatch "${FILESDIR}/${P}-riceitdown.patch"
-
-	eautoreconf
-	elibtoolize
-}
-
-src_compile() {
-	econf \
-		--enable-static \
-		--enable-shared \
-		|| die "econf failed"
-	emake || die "emake failed"
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die "make install failed"
-	dodoc AUTHORS ChangeLog README
-}
