@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libmpcdec
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpcdec/ChangeLog,v 1.39 2008/11/10 11:36:22 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpcdec/ChangeLog,v 1.40 2009/05/11 09:02:10 ssuominen Exp $
+
+  11 May 2009; Samuli Suominen <ssuominen@gentoo.org> -libmpcdec-1.2.ebuild,
+  -libmpcdec-1.2.2.ebuild, -libmpcdec-1.2.5.ebuild, -libmpcdec-1.2.6.ebuild,
+  -libmpcdec-1.2.6-r1.ebuild, libmpcdec-1.2.6-r2.ebuild:
+  Remove elibtoolize because eautoreconf includes running it. Fix SRC_URI
+  wrt #256500.
 
   10 Nov 2008; Raúl Porcel <armin76@gentoo.org> libmpcdec-1.2.6-r2.ebuild:
   arm/sh stable
